# UAV-link-quality-routing-support

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Dockerfile.dashboard  Dockerfile.serve  README-EN.md  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements-serve.txt  requirements.txt
.dvc/: config
.github/workflows/: build-and-push.yml  ci.yml  deploy.yml
deploy/: serving_model.json
deploy/argocd/: application.yaml
docs/: baseline_pipeline.md  data_generation.md  dataset_spec.md  experiment_plan.md  implementation_plan.md  production_plan.md  quick_start.md  results_tracking.md  scenario_catalog.md
memory/: MEMORY.md  claude_summary.md  project_gnn_status.md
models/baselines/: mlp_baseline.py
preprocessing/: run_preprocessing.py
preprocessing/non-gnn/: handle_imbalance.py  standardize_baseline_data.py
scripts/: README.md  RUN_EXAMPLES.md  install_aws_tf.ps1  list_run_names.sh  run_all_mlp_for_runs.sh  run_many_random_datasets.sh  run_one_dataset.sh
scripts/dataset/: generate_batch.py  run_many_random_datasets.sh  run_many_random_datasets_ns3.sh  run_one_dataset.sh  run_one_dataset_ns3.sh
scripts/docs/: README.md  RUN_EXAMPLES.md
scripts/mlops/: deploy_cloud_run.sh  promote_model.sh  stage_serving_model.sh
scripts/routing/: run_pth_sweep.sh  (+2 more)
simulation/: config.py  config_utils.py  entities.py  io_utils.py  main.py  metrics.py  mobility.py  olsr.py  pipeline_io.py  routing.py  topology.py  visualization.py
simulation/ns3/: CMakeLists.txt  README.md  uav-olsr-dataset.cc
tests/: __init__.py  conftest.py  test_data_quality.py  test_models.py  test_preprocessing.py
uav_sim/: config.py  main.py
(+75 files in other folders)
