[project]
name = "uav-gnn"
version = "1.0.0"
description = "UAV Link Quality Prediction with Graph Neural Networks"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests", "simulation"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
